--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
+    "js-tokens": "^9.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "resolve-from": "^5.0.0"
   },
   "private": true,
   "devDependencies": {
